syntax = "proto3";

package tracker;

option go_package = "tracker/proto;proto"; // replace with your actual Go module path

service TrackerService {
    rpc CreateTracker(CreateTrackerRequest) returns (CreateTrackerResponse);
    rpc UpdateCountTracker(UpdateCountTrackerRequest) returns (UpdateCountTrackerResponse);
}

message Tracker {
  string id = 1;
  string adId = 2;
  int32 count = 3;
}

message CreateTrackerRequest {
  string adId = 1;
}

message CreateTrackerResponse {
  Tracker tracker = 1;
}

message UpdateCountTrackerRequest {
    string adId = 1;
}
message UpdateCountTrackerResponse {
  Tracker tracker = 1;
}
